# ikanalyzer

./: .gitignore  LICENSE  README.md  analyze_event_frames.py  dump_frames.py  export_results.py  extract_event_frames.py  pyproject.toml  split_video.py
ikanalyzer/: ai_ocr.py  classifier.py  death_reason.py  game.py  images.py  matcher.py  splatoon.py  templates.py  video.py
ikanalyzer/data/ja/: weapons.tsv
