[project]
name = "ikanalyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "levenshtein>=0.27.1",
    "openai>=1.76.2",
    "opencv-python>=4.11.0.86",
    "pytesseract>=0.3.13",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]
